# QuantaMrkt

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  LICENSE  README.md
agents/code-reviewer/: README.md  agent.py  identity.json  pyproject.toml
agents/compliance-monitor/: README.md  agent.py  identity.json  pyproject.toml
agents/data-pipeline/: README.md  agent.py  identity.json  pyproject.toml
agents/deploy-bot/: README.md  agent.py  identity.json  pyproject.toml
agents/finance-copilot/: README.md  agent.py  identity.json  pyproject.toml
agents/legacy-monitor/: README.md  agent.py  identity.json  pyproject.toml
agents/research-assistant/: README.md  agent.py  identity.json  pyproject.toml
agents/security-scanner/: README.md  agent.py  identity.json  pyproject.toml
api/: README.md  pyproject.toml
api/src/quantmrkt_api/: __init__.py  main.py
api/tests/: test_routes.py
lib/: README.md  pyproject.toml
lib/src/quantumshield/: __init__.py  signing_service.py
lib/tests/: test_core.py  test_identity.py  test_keystore.py  test_migrator.py  test_registry.py
site/: package.json  (+5 more)
tools/pqc-agent-wallet/: README.md  pyproject.toml
tools/pqc-agent-wallet/examples/: basic_usage.py  env_shim_demo.py  langchain_integration.py
tools/pqc-agent-wallet/tests/: conftest.py  test_audit.py  test_credential.py  test_integrations.py  test_kdf.py  test_kem_wallet.py  test_vault_crud.py  test_vault_lock.py  test_vault_persistence.py
tools/pqc-ai-governance/: README.md  pyproject.toml
tools/pqc-ai-governance/examples/: byzantine_detection.py  emergency_freeze.py  model_authorization.py
tools/pqc-ai-governance/tests/: conftest.py  test_audit.py  test_authorization.py  test_integration.py  test_node.py  test_proposal.py  test_round.py  test_tally.py  test_vote.py
tools/pqc-audit-log-fs/: README.md  pyproject.toml
tools/pqc-audit-log-fs/examples/: basic_log.py  prove_inclusion.py  tamper_detection.py
tools/pqc-audit-log-fs/tests/: conftest.py  test_anchor.py  test_appender.py  test_cli.py  test_event.py  test_guard.py  test_integration.py  test_merkle.py  test_prover.py  test_reader.py  test_segment.py
tools/pqc-bootloader/: README.md  pyproject.toml
tools/pqc-bootloader/examples/: rogue_firmware_rejected.py  sign_and_boot.py  update_rollback_blocked.py
tools/pqc-bootloader/tests/: conftest.py  test_audit.py  test_firmware.py  test_integration.py  test_key_ring.py  test_measured_boot.py  test_signer.py  test_update_chain.py
tools/pqc-content-provenance/: README.md  pyproject.toml
tools/pqc-content-provenance/examples/: detect_tampered_output.py  provenance_chain.py  sign_llm_output.py
tools/pqc-content-provenance/tests/: conftest.py  test_assertions.py  test_chain.py  test_embed.py  test_integration.py  test_manifest.py  test_signer.py
tools/pqc-ebpf-attestation/: README.md  pyproject.toml
tools/pqc-ebpf-attestation/examples/: enforce_load_policy.py  sign_and_verify.py  tampered_bytecode_rejected.py
tools/pqc-ebpf-attestation/tests/: conftest.py  test_audit.py  test_cli.py  test_integration.py  test_policy.py  test_program.py  test_signer.py
tools/pqc-enclave-sdk/: README.md  pyproject.toml
tools/pqc-enclave-sdk/examples/: device_attestation.py  store_credentials.py  store_model_weights.py
tools/pqc-enclave-sdk/tests/: conftest.py  test_artifact.py  test_attestation.py  test_audit.py  test_backends.py  test_integration.py  test_policy.py  test_vault.py
tools/pqc-federated-learning/: README.md  pyproject.toml
tools/pqc-federated-learning/examples/: byzantine_client_rejected.py  robust_median.py  simple_fedavg.py
tools/pqc-federated-learning/tests/: conftest.py  test_aggregator.py  test_aggregators.py  test_integration.py  test_signer.py  test_update.py
tools/pqc-gpu-driver/: README.md  pyproject.toml
tools/pqc-gpu-driver/examples/: basic_channel.py  driver_attestation.py  tensor_tamper_detection.py
tools/pqc-gpu-driver/tests/: conftest.py  test_backends.py  test_channel.py  test_driver_attest.py  test_integration.py  test_tensor.py
tools/pqc-hypervisor-attestation/: README.md  pyproject.toml
tools/pqc-hypervisor-attestation/examples/: basic_attestation.py  continuous_loop_demo.py  detect_memory_tampering.py
tools/pqc-hypervisor-attestation/tests/: conftest.py  test_backends.py  test_claim.py  test_continuous.py  test_drift.py  test_integration.py  test_region.py  test_signer.py
tools/pqc-kv-cache-encryption/: README.md  pyproject.toml
tools/pqc-kv-cache-encryption/examples/: basic_kv_encryption.py  key_rotation.py  multi_tenant_isolation.py
tools/pqc-kv-cache-encryption/tests/: conftest.py  test_audit.py  test_encryptor.py  test_entry.py  test_integration.py  test_isolation.py  test_rotation.py  test_session.py
tools/pqc-lint-action/: README.md  action.yml  pyproject.toml
tools/pqc-lint-action/examples/: vulnerable_sample.py
tools/pqc-lint-action/tests/: conftest.py  test_cli.py  test_findings.py  test_reporters.py  test_rules.py  test_scanner_go.py  test_scanner_javascript.py  test_scanner_python.py  test_suggestions.py
tools/pqc-mbom/: README.md  pyproject.toml
tools/pqc-mbom/examples/: build_llama_mbom.py  detect_dataset_swap.py  mbom_to_spdx.py
tools/pqc-mbom/tests/: conftest.py  test_component.py  test_diff.py  test_integration.py  test_mbom.py  test_signer.py  test_spdx.py
tools/pqc-mcp-transport/: LICENSE  README.md  pyproject.toml
tools/pqc-mcp-transport/examples/: mutual_auth.py  simple_client.py  simple_server.py
tools/pqc-mcp-transport/tests/: conftest.py  test_client.py  test_handshake.py  test_integration.py  test_server.py  test_session.py  test_signer.py
tools/pqc-rag-signing/: README.md  pyproject.toml
tools/pqc-rag-signing/examples/: poisoning_attack_demo.py  retrieve_and_verify.py  simple_ingest.py
tools/pqc-rag-signing/tests/: conftest.py  test_adapters.py  test_audit.py  test_chunk.py  test_corpus.py  test_integration.py  test_signer.py  test_verifier.py
tools/pqc-reasoning-ledger/: README.md  pyproject.toml
tools/pqc-training-data-transparency/: README.md  pyproject.toml
(+332 files in other folders)
