[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantumshield"
version = "0.1.0"
description = "Post-quantum cryptography toolkit for AI systems."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Dyber PQC" },
]

dependencies = [
    "click",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich",
]

[project.optional-dependencies]
pqc = [
    "liboqs-python>=0.10",
]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
quantumshield = "quantumshield.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/quantumshield"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
