[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-agent-compliance-monitor"
version = "0.1.0"
description = "Watches governance proposals and writes PQC-signed compliance events"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "agent", "ml-dsa", "quantumshield", "governance", "compliance", "audit"]
dependencies = [
    "quantumshield>=0.1.0",
    "pqc-ai-governance>=0.1.0",
    "pqc-audit-log-fs>=0.1.0",
]

[project.scripts]
compliance-monitor = "pqc_agent_compliance_monitor.agent:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
