[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-agent-data-pipeline"
version = "0.1.0"
description = "ETL agent that commits ML-DSA-signed Merkle roots for every processed batch"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "agent", "ml-dsa", "quantumshield", "etl", "merkle", "transparency"]
dependencies = [
    "quantumshield>=0.1.0",
    "pqc-training-data-transparency>=0.1.0",
    "pqc-audit-log-fs>=0.1.0",
]

[project.scripts]
data-pipeline = "pqc_agent_data_pipeline.agent:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
