[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-agent-legacy-monitor"
version = "0.1.0"
description = "Suspended agent that demonstrates the PQC-AID revocation flow"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "agent", "ml-dsa", "quantumshield", "legacy", "revocation", "suspended"]
dependencies = [
    "quantumshield>=0.1.0",
    "pqc-lint>=0.1.0",
    "pqc-audit-log-fs>=0.1.0",
]

[project.scripts]
legacy-monitor = "pqc_agent_legacy_monitor.agent:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
