[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-agent-security-scanner"
version = "0.1.0"
description = "Scans code for classical crypto and PQC-attests loaded eBPF sensors"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "agent", "ml-dsa", "quantumshield", "security", "ebpf", "lint"]
dependencies = [
    "quantumshield>=0.1.0",
    "pqc-lint>=0.1.0",
    "pqc-ebpf-attestation>=0.1.0",
]

[project.scripts]
security-scanner = "pqc_agent_security_scanner.agent:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
