[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-agent-wallet"
version = "0.1.0"
description = "Quantum-resistant credential wallet for AI agents. ML-KEM-768 key encapsulation, AES-256-GCM at rest, ML-DSA signed access audit log. LangChain/AutoGen/CrewAI integrations."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "credentials", "vault", "ml-kem", "ml-dsa", "langchain", "autogen", "crewai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "quantumshield>=0.1.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/pqc_agent_wallet"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "examples/", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
