[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-ai-governance"
version = "0.1.0"
description = "PQC Byzantine fault-tolerant consensus for federated AI governance. ML-DSA signed policy proposals, vote tallying with threshold, quantum-safe authorization chains for enterprise AI."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "consensus", "byzantine", "governance", "ml-dsa", "enterprise-ai", "authorization", "dao"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "quantumshield>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/pqc_ai_governance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
