[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-content-provenance"
version = "0.1.0"
description = "PQC-native C2PA-compatible content provenance for AI-generated outputs. Sign every LLM/image/audio output with ML-DSA so its origin is verifiable for decades."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "c2pa", "content-provenance", "ml-dsa", "post-quantum", "ai-attribution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "quantumshield>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/pqc_content_provenance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
