[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-enclave-sdk"
version = "0.1.0"
description = "PQC Secure Enclave SDK for on-device AI. ML-KEM-768 key encapsulation + AES-256-GCM encrypted model weights and credentials, pluggable backends for iOS Secure Enclave, Android StrongBox, Qualcomm QSEE."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "secure-enclave", "on-device-ai", "ios", "android", "ml-kem", "aes-gcm", "strongbox", "neural-engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "quantumshield>=0.1.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/pqc_enclave_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
