[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-federated-learning"
version = "0.1.0"
description = "PQC-secured federated learning aggregation. ML-DSA signed gradient updates, verifiable aggregation proofs. Quantum-safe FL for healthcare, finance, and regulated enterprises."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "federated-learning", "ml-dsa", "post-quantum", "aggregation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "quantumshield>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/pqc_federated_learning"]

[tool.pytest.ini_options]
testpaths = ["tests"]
