[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-hypervisor-attestation"
version = "0.1.0"
description = "PQC-signed hypervisor memory attestation framework for AI workloads. ML-DSA signed claims about memory region state, pluggable backends for AMD SEV-SNP and Intel TDX."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "hypervisor", "attestation", "confidential-computing", "sev-snp", "tdx", "ml-dsa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "quantumshield>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/pqc_hypervisor_attestation"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "examples/", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
