[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-kv-cache-encryption"
version = "0.1.0"
description = "PQC-native per-tenant KV cache encryption for multi-tenant LLM inference. ML-KEM-768 derived session keys, AES-256-GCM per-entry encryption, automatic key rotation, tenant isolation enforcement."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "llm", "kv-cache", "multi-tenant", "ml-kem", "aes-gcm", "inference", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "quantumshield>=0.1.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/pqc_kv_cache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
