[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-lint"
version = "0.1.0"
description = "Lint and flag classical (quantum-vulnerable) cryptography in source code. Ships as a GitHub Action and a CLI."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "post-quantum", "cryptography", "linter", "security", "sast", "github-action"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
pqc-lint = "pqc_lint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pqc_lint"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "examples/", "README.md", "LICENSE", "action.yml", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
