[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-mbom"
version = "0.1.0"
description = "PQC-signed AI Model Bill of Materials (MBOM). Cryptographically enumerate every model component (weights, training data, fine-tuning, RLHF, quantization, evals) with quantum-safe ML-DSA signatures."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "mbom", "sbom", "ai-model", "provenance", "supply-chain", "ml-dsa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "quantumshield>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/pqc_mbom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
