[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-mcp-transport"
version = "0.1.0"
description = "PQC-secured transport layer for Model Context Protocol (MCP). ML-DSA signed messages and agent identity verification."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
dependencies = [
    "quantumshield>=0.1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
