[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-rag-signing"
version = "0.1.0"
description = "PQC-signed RAG pipeline chunks. Sign document chunks with ML-DSA at ingestion, verify at retrieval. Prevents vector database poisoning."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Dyber PQC" }]
keywords = ["pqc", "rag", "ml-dsa", "post-quantum", "vector-database", "provenance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "quantumshield>=0.1.0",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5"]
pinecone = ["pinecone-client>=3.0"]
qdrant = ["qdrant-client>=1.7"]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/pqc_rag_signing"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "examples/", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
